# codex-pet-maker

./: .gitignore  README.md  SKILL.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: install-test.yml
docs/superpowers/plans/: 2026-05-09-codex-pet-maker.md
docs/superpowers/specs/: 2026-05-09-codex-pet-maker-design.md
prompts/: base.md  style.md
prompts/rows/: failed.md  idle.md  jumping.md  review.md  running-left.md  running-right.md  running.md  waiting.md  waving.md
references/: animation-rows.md  codex-pet-contract.md  qa-rubric.md
scripts/: __init__.py  atlas.py  extract.py  matte.py  package.py  petio.py  prepare.py  qa.py  record.py
tests/: conftest.py  test_atlas.py  test_extract.py  test_install_script.py  test_matte.py  test_package.py  test_petio.py  test_prepare.py  test_qa.py  test_record.py
