[project]
name = "codex-pet-maker"
version = "0.1.0"
description = "Lean Codex skill for generating Codex-app-compatible animated pet packages."
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0",
    "numpy>=1.24",
    "rembg>=2.0.50",
    "onnxruntime>=1.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that download models or do heavy work",
]
